--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -14,7 +14,7 @@
      limitations under the License.
 -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="android.support.v4.preferencefragment">
+          package="androidx.core.preferencefragment">
     <uses-sdk android:minSdkVersion="7"/>
     <application></application>
 </manifest>
