--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -13,8 +13,5 @@
      See the License for the specific language governing permissions and
      limitations under the License.
 -->
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="androidx.core.preferencefragment">
-    <uses-sdk android:minSdkVersion="7"/>
-    <application></application>
+<manifest package="androidx.core.preferencefragment">
 </manifest>
