--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,8 @@
 buildscript {
     repositories {
-        mavenCentral()
+        jcenter()
         mavenLocal()
+        google()
     }
 
     dependencies {
@@ -9,7 +10,7 @@ buildscript {
     }
 }
 
-apply plugin: 'android-library'
+apply plugin: 'com.android.library'
 apply plugin: 'maven'
 
 version = VERSION
@@ -24,7 +25,7 @@ android {
     buildToolsVersion '28.0.3'
 
     defaultConfig {
-        minSdkVersion 7
+        minSdkVersion 14
         targetSdkVersion 28
     }
 
